# GMockWithCatch2

./: CMakeLists.txt  README.md  TestGMockCatch2.cpp  TestGMockCatch2WithMain.cpp  mock_class.hpp
cmake/: AddCatch2.cmake  AddGTest.cmake
